@@ -1,6 +1,7 @@
 package database;
 
 import base.*;
+import com.mysql.jdbc.ResultSetImpl;
 import screen.EnumUserType;
 import sun.awt.image.ImageWatched;
 import sun.rmi.runtime.Log;
@@ -14,6 +15,7 @@ import java.sql.DriverManager;
 import java.sql.SQLException;
 import java.sql.*;
 import java.util.LinkedList;
+import java.util.concurrent.TimeUnit;
 
 public class DatabaseManager {
     /**
@@ -24,7 +26,7 @@ public class DatabaseManager {
     private String databaseType;
     private String databaseName;
     private String databaseServer;
-    private boolean derby = false;
+    private boolean derby = false; //Plz no
     private boolean mysql = false;
     private static String endQueryLine;
 //    private boolean sqlite = false;
@@ -33,21 +35,16 @@ public class DatabaseManager {
     ///////////EXCEPTIONS////////////////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
     public class UserNotFoundException extends Exception {
-//        String username;
-
         UserNotFoundException(String username) {
             super("User " + username + " not found");
         }
     }
 
     public class IncorrectPasswordException extends Exception {
-//        String username;
-
         IncorrectPasswordException(String username) {
-            super("Incorrect password for user " + username + "!");
+            super("Incorrect password for user " + username + "!"); //<HAL>I'm sorry Dave, but I'm afraid I can't do that.</HAL>
         }
     }
-
 
     /////////////////////////////////////////////////////////////////////////////////
     ///////////CONSTRUCTOR - CONNECTS TO DATABASE////////////////////////////////////
@@ -57,18 +54,17 @@ public class DatabaseManager {
         databaseName = "TTB";
         databaseServer = "icarusnet.me";
 
-        if(databaseType.equals("derby")){
-            derby = true;
+        if (databaseType.equals("derby")) {
+            derby = true; //MAGIC!
             endQueryLine = "";
-        }
-        else if(databaseType.equals("mysql") || databaseType.equals("MySQL")){
-            mysql = true;
+        } else if (databaseType.equals("mysql") || databaseType.equals("MySQL")) {
+            mysql = true; //MORE MAGIC!
             endQueryLine = ";";
         }
         /*else if(database.equals("sqlite") || database.equals("SQLite")){
             sqlite = true
         }*/
-        else{
+        else {
             LogManager.println("Unknown database type!", EnumWarningType.ERROR);
             return;
         }
@@ -81,58 +77,70 @@ public class DatabaseManager {
         }*/
 //        LogManager.println("    Driver registered!");
         LogManager.print("Attempting connection to " + databaseType + " database... ");
-        try {
-
-            if(derby){
-                connection = DriverManager.getConnection("jdbc:derby:"+databaseName+";create=true");
-            }
-            else if(mysql){
-                connection = DriverManager.getConnection("jdbc:mysql://"+databaseServer+"/"+databaseName+"?" + "user=cadborosaurus&password=JT6N0x5dm09OgpPU");
-            }
+        boolean noDB = true;
+        int MAXTRIES = 10;
+        int tries = 0;
+        while (noDB) {
+            try {
+                if (derby) {
+                    connection = DriverManager.getConnection("jdbc:derby:" + databaseName + ";create=true");
+                } else if (mysql) {
+                    connection = DriverManager.getConnection("jdbc:mysql://" + databaseServer + "/" + databaseName + "?" + "user=cadborosaurus&password=JT6N0x5dm09OgpPU");
+                }
             /*else if(sqlite){
                 connection = DriverManager.getConnection("jdbc:sqlite:TTB.db");
             }*/
-            LogManager.println("Connection established!");
-        } catch (SQLException e) {
-            LogManager.println("");
-            LogManager.print("Database connection failed. ", EnumWarningType.ERROR);
-            if(derby){
-                LogManager.println("There may already be a connection to the database.");
-            }
-            else if(mysql){
+                LogManager.println("Connection established!");
+                noDB = false;
+            } catch (SQLException e) { //BOOKER, CATCH!
                 LogManager.println("");
+                LogManager.print("Database connection failed. ", EnumWarningType.ERROR);
+                if (derby) {
+                    LogManager.println("There may already be a connection to the database."); //Derby is monogamous.
+                } else if (mysql) {
+                    LogManager.println("");
+                }
+                if (tries == MAXTRIES) {
+                    LogManager.println("Giving up.", EnumWarningType.ERROR);
+                    System.exit(0);
+                }
+                LogManager.println("Retrying...", EnumWarningType.NOTE);
+                try {
+                    TimeUnit.SECONDS.sleep(5);
+                } catch (InterruptedException e1) {
+//                    e1.printStackTrace();
+                }
+                tries++;
             }
-            //e.printStackTrace();
-//            LogManager.printStackTrace(e.getStackTrace());
-//            e.printStackTrace();
-
-            return;
+          
+          
         }
-//        LogManager.println("Java DB connection established!");
 
         try {
             statement = connection.createStatement();
-        } catch (SQLException e) {
+        } catch (SQLException e) {//CATCH, BOOKER!
             LogManager.printStackTrace(e.getStackTrace());
-            LogManager.println("statement failed");
+            LogManager.println("statement failed"); // （　ﾟДﾟ）
             e.printStackTrace();
         }
+        //On the second day, god...
         createTables();
-//        entryTest();
+        //...created the tables
+//        entryTest(); //Even god tests his database.
     }
 
     /////////////////////////////////////////////////////////////////////////////////
     ///////////CREATE TABLES/////////////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
-    public static void createTables() {
+    private static void createTables() {
         LogManager.println("Creating Tables: ", EnumWarningType.NOTE);
         LogManager.print("Creating alcohol table... ", EnumWarningType.NOTE);
         try {
             statement.executeUpdate("CREATE TABLE Alcohol(\n" +
-                    " TTBID VARCHAR(30) PRIMARY KEY,\n" +
+                    " TTBID VARCHAR(30) PRIMARY KEY UNIQUE,\n" +
                     " PermitNo VARCHAR(30) NOT NULL,\n" +
                     " SerialNo VARCHAR(30) NOT NULL,\n" +
-                    " CompletedDate DATE,\n" +
+                    " CompletedDate VARCHAR(20),\n" +
                     " FancifulName VARCHAR(100),\n" +
                     " BrandName VARCHAR(100) NOT NULL,\n" +
                     " Class VARCHAR(50) NOT NULL,\n" +
@@ -143,19 +151,20 @@ public class DatabaseManager {
                     " PH VARCHAR(10)\n" +
                     ")" + endQueryLine);
             LogManager.println("Done.");
-        } catch (SQLException e) {
-            createTableError(e);
+        } catch (SQLException e) { //BOOKERCATCH!!!!
+            createTableError(e); //It was as if a million voices suddenly cried out in terror, and were suddenly silenced.
         }
         LogManager.print("Creating applications table... ", EnumWarningType.NOTE);
         try {
             statement.executeUpdate("CREATE TABLE Applications(\n" +
-                    " ApplicationNo VARCHAR(20) PRIMARY KEY,\n" +
+                    " ApplicationNo VARCHAR(20) PRIMARY KEY UNIQUE,\n" +
                     " SerialNo VARCHAR(30) NOT NULL,\n" +
                     " ApplicationType VARCHAR(30) NOT NULL,\n" +
                     " ApplicationStatus VARCHAR(15) NOT NULL,\n" +
                     " ManufacturerUsername VARCHAR(20),\n" +
-                    " AgentName VARCHAR(30),\n" +
+                    " RepName VARCHAR(30),\n" +
                     " AgentUsername VARCHAR(30),\n" +
+                    " AgentName VARCHAR(30),\n" +
                     " RepID VARCHAR(30),\n" +
                     " PlantRegistry VARCHAR(30) NOT NULL,\n" +
                     " Locality VARCHAR(30) NOT NULL,\n" +
@@ -196,12 +205,12 @@ public class DatabaseManager {
                     ")" + endQueryLine);
             LogManager.println("Done.");
         } catch (SQLException e) {
-            createTableError(e);
+            createTableError(e); //(ノಠ ∩ಠ)ノ彡( \o°o)\
         }
-        LogManager.print("Creating manufactureres table... ", EnumWarningType.NOTE);
+        LogManager.print("Creating manufacturers table... ", EnumWarningType.NOTE);
         try {
             statement.executeUpdate("CREATE TABLE Manufacturers(\n" +
-                    " Username VARCHAR(30) PRIMARY KEY,\n" +
+                    " Username VARCHAR(30) PRIMARY KEY UNIQUE,\n" +
                     " PasswordHash VARCHAR(75) NOT NULL,\n" +
                     " Company VARCHAR(100) NOT NULL,\n" +
                     " FullName VARCHAR(50) NOT NULL,\n" +
@@ -209,21 +218,23 @@ public class DatabaseManager {
                     " Email VARCHAR(50) NOT NULL,\n" +
                     " PlantRegistry VARCHAR(50) NOT NULL,\n" +
                     " PhoneNo VARCHAR(20) NOT NULL,\n" +
-                    " Address2 VARCHAR(50) NOT NULL\n" +
+                    " Address2 VARCHAR(50) NOT NULL,\n" +
+                    " Agent VARCHAR(30),\n" +
+                    " AgentDate VARCHAR(20)\n" +
                     ")" + endQueryLine);
             LogManager.println("Done.");
         } catch (SQLException e) {
             createTableError(e);
         }
-
     }
-    private static void createTableError(Exception e){
-        if(e.getMessage().contains("already exists")){
+
+    private static void createTableError(Exception e) {
+        if (e.getMessage().contains("already exists")) {
             LogManager.println("Already exists.");
-        }
-        else{
+        } else {
             LogManager.println("ERROR: " + e.getMessage());
-            System.exit(0);
+
+            System.exit(0); //(╯°□°）╯︵ ┻━┻
         }
     }
 
@@ -235,9 +246,9 @@ public class DatabaseManager {
         String value1 = value.toUpperCase();
         if (table.equals(EnumTableType.ALCOHOL)) {
             if (value.isEmpty() && type.equals("All")) {
-                return queryAlcohol("SELECT * FROM Alcohol"+endQueryLine);
+                return queryAlcohol("SELECT * FROM Alcohol" + endQueryLine);
             } else {
-                switch (type) {
+                switch (type) { //funky fresh
                     case "All":
                         return queryAlcohol("SELECT * FROM Alcohol WHERE BrandName LIKE '" + value1 + "%' OR BrandName LIKE '%" + value1 + "' OR BrandName LIKE '%" + value1 + "%'" + endQueryLine);
                     case "Beer":
@@ -261,6 +272,7 @@ public class DatabaseManager {
             LogManager.println("SEARCHING FOR MANUFACTURER " + column + " = " + value);
             return queryAgents("SELECT * FROM Agents WHERE " + column + " = '" + value + "'" + endQueryLine);
         }
+        //You asked for a hamburger. I...
         return null;
     }
 
@@ -270,46 +282,42 @@ public class DatabaseManager {
     /////////////////////////////////////////////////////////////////////////////////
     public static LinkedList<DataSet> advancedSearch(String cat1, String val1, String cat2, String val2, String cat3, String val3) {
 
-        if(cat1.equals("BrandName") || cat1.equals("FancifulName")){
-            val1 = val1.toUpperCase();
+        if (cat1.equals("BrandName") || cat1.equals("FancifulName")) {
+            val1 = val1.toUpperCase(); //lowercase is lame.
         }
-        if(cat2.equals("BrandName") || cat2.equals("FancifulName")){
+        if (cat2.equals("BrandName") || cat2.equals("FancifulName")) {
             val2 = val2.toUpperCase();
         }
-        if(cat3.equals("BrandName") || cat2.equals("FancifulName")){
+        if (cat3.equals("BrandName") || cat2.equals("FancifulName")) {
             val3 = val3.toUpperCase();
         }
-        
+
         String query1 = "SELECT * FROM Alcohol WHERE " + cat1 + " LIKE '" + val1 + "%' OR " + cat1 + " LIKE '%" + val1 + "' OR " + cat1 + " LIKE '%" + val1 + "%'";
         String query2 = "SELECT * FROM Alcohol WHERE " + cat2 + " LIKE '" + val2 + "%' OR " + cat2 + " LIKE '%" + val2 + "' OR " + cat2 + " LIKE '%" + val2 + "%'";
         String query3 = "SELECT * FROM Alcohol WHERE " + cat3 + " LIKE '" + val3 + "%' OR " + cat3 + " LIKE '%" + val3 + "' OR " + cat3 + " LIKE '%" + val3 + "%'";
-        String combinedQuery;
+        String combinedQuery; //4 Cuils
 
-        if(cat1.equals("BrandName") || cat1.equals("FancifulName")){
+        if (cat1.equals("BrandName") || cat1.equals("FancifulName")) {
             val1 = val1.toUpperCase();
         }
-        if(cat2.equals("BrandName") || cat2.equals("FancifulName")){
+        if (cat2.equals("BrandName") || cat2.equals("FancifulName")) {
             val2 = val2.toUpperCase();
         }
-        if(cat3.equals("BrandName") || cat2.equals("FancifulName")){
+        if (cat3.equals("BrandName") || cat2.equals("FancifulName")) {
             val3 = val3.toUpperCase();
         }
 
         try {
-            if(!val1.isEmpty() && val2.isEmpty() && val3.isEmpty()){
+            if (!val1.isEmpty() && val2.isEmpty() && val3.isEmpty()) {
                 combinedQuery = query1;
-            }
-            else if(!val1.isEmpty() && !val2.isEmpty() && val3.isEmpty()){
+            } else if (!val1.isEmpty() && !val2.isEmpty() && val3.isEmpty()) {
                 combinedQuery = query1 + "UNION " + query2;
-            }
-            else if(!val1.isEmpty() && val2.isEmpty() && !val3.isEmpty()){
+            } else if (!val1.isEmpty() && val2.isEmpty() && !val3.isEmpty()) {
                 combinedQuery = query1 + "UNION " + query3;
-            }
-            else if(!val1.isEmpty() && !val2.isEmpty() && !val3.isEmpty()){
+            } else if (!val1.isEmpty() && !val2.isEmpty() && !val3.isEmpty()) {
                 combinedQuery = query1 + "UNION " + query2 + "UNION " + query3;
-            }
-            else{
-                combinedQuery = "SELECT * FROM Alcohol";
+            } else {
+                combinedQuery = "SELECT * FROM Alcohol"; //It's been a rough day.
             }
         } catch (Exception e) {
             LogManager.println("No matches found!", EnumWarningType.WARNING);
@@ -329,7 +337,7 @@ public class DatabaseManager {
         try {
             ResultSet getAlcohol = statement.executeQuery(queryStr);
             while (getAlcohol.next()) {
-                Alcohol alcohol = new Alcohol();
+                Alcohol alcohol = new Alcohol(); //Bottoms up!
                 alcohol.TTBID = getAlcohol.getString("TTBID");
                 alcohol.PermitNo = getAlcohol.getString("PermitNo");
                 alcohol.SerialNo = getAlcohol.getString("SerialNo");
@@ -345,18 +353,18 @@ public class DatabaseManager {
                 alcoholLinkedList.add(alcohol);
             }
         } catch (SQLException e) {
-            LogManager.println("No matches!", EnumWarningType.WARNING);
+            LogManager.println("No matches!", EnumWarningType.WARNING);//Bummer, dude.
             return new LinkedList<>();
         }
-
         return alcoholLinkedList;
+//        ヽ(´ー｀)ノ
     }
 
     /////////////////////////////////////////////////////////////////////////////////
     ///////////GENERATE TTBID////////////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
     private static String generateTTBID() {
-        return Long.toString(Math.round(Math.random() * 10000000));
+        return Long.toString(Math.round(Math.random() * 10000000)); //(;o;)
     }
 
     /////////////////////////////////////////////////////////////////////////////////
@@ -364,7 +372,8 @@ public class DatabaseManager {
     /////////////////////////////////////////////////////////////////////////////////
     public static void submitApplication(Application application) {
         // OLD PARAMETERS: String Manufacturer, String PermitNo, String Status, String AlcoholType, String AgentID, String Source, String Brand, String Address, String Address2, String Volume, String ABV, String PhoneNo, String AppType, String VintageDate, String PH, String ApplicantName, String DateSubmitted, String DBAorTrade, String Email
-        String ApplicationNo = generateTTBID();
+        application.ApprovedTTBID = generateTTBID(); //Welcome to the new age.
+        application.ApplicationNo = application.ApprovedTTBID;
         String date = StringUtilities.getDate();
         try {
             LogManager.println("Submitting new application.", EnumWarningType.NOTE);
@@ -375,8 +384,9 @@ public class DatabaseManager {
                     "ApplicationType," +
                     "ApplicationStatus," +
                     "ManufacturerUsername, " +
-                    "AgentName, " +
+                    "RepName, " +
                     "AgentUsername, " +
+                    "AgentName, " +
                     "RepID, " +
                     "PlantRegistry, " +
                     "Locality, " +
@@ -388,8 +398,8 @@ public class DatabaseManager {
                     "Address2, " +
                     "Formula, " +
                     "WineAppelation, " +
-                    "VintageDate," +
-                    "Grapes, " +
+                    "VintageDate," + //Even older than your mom.
+                    "Grapes, " + //I'm sorry. I'm sure your mom is a lovely person.
                     "PH," +
                     "PhoneNo, " +
                     "Email, " +
@@ -400,13 +410,14 @@ public class DatabaseManager {
                     "ApprovedTTBID," +
                     "ReasonForRejection" +
                     ") VALUES ('"
-                    + ApplicationNo + "', '"
+                    + application.ApplicationNo + "', '"
                     + application.SerialNo + "', '"
                     + application.ApplicationType + "', '"
                     + application.ApplicationStatus + "', '"
                     + application.ManufacturerUsername + "', '"
-                    + application.AgentName + "', '"
+                    + application.RepName + "', '"
                     + application.AgentUsername + "', '"
+                    + application.AgentName + "', '"
                     + application.RepID + "', '"
                     + application.PlantRegistry + "', '"
                     + application.Locality + "', '"
@@ -431,16 +442,16 @@ public class DatabaseManager {
                     + application.ReasonForRejection
                     + "')" + endQueryLine);
         } catch (SQLException e) {
-            LogManager.println("Failed to submit new application " + ApplicationNo + ": " + e.getMessage());
+            LogManager.println("Failed to submit new application " + application.ApplicationNo + ": " + e.getMessage()); //I cannot change the laws of physics, cap'n!
 
         }
         try {
             statement.executeUpdate("UPDATE Applications\n" +
-                    "SET DateOfSubmission = " + date +"\n" +
+                    "SET DateOfSubmission = '" + date + "'\n" +
                     "WHERE ApplicationNo = " + "ApplicationNo" + endQueryLine);
-        }
-        catch (SQLException e){
-            LogManager.print("Could not set DateOfSubmission on newly submitted application " + ApplicationNo + ": ");
+        } catch (SQLException e) {
+            //ಠ_ಠ
+            LogManager.print("Could not set DateOfSubmission '" + date + "' on newly submitted application " + application.ApplicationNo + ": ");
             LogManager.println(e.getMessage());
         }
     }
@@ -463,12 +474,14 @@ public class DatabaseManager {
                 manufacturer.email = searchManufacturers.getString("email");
                 manufacturer.userType = EnumUserType.MANUFACTURER;
                 manufacturer.Address2 = searchManufacturers.getString("Address2");
-                manufacturer.Company = searchManufacturers.getString("Company");
-                manufacturer.name = searchManufacturers.getString("Name");
+                manufacturer.Company = searchManufacturers.getString("Company"); //I have a cat.
+                manufacturer.name = searchManufacturers.getString("FullName");
                 manufacturer.RepID = searchManufacturers.getString("RepID");
                 manufacturer.PlantRegistry = searchManufacturers.getString("PlantRegistry");
                 manufacturer.PhoneNo = searchManufacturers.getString("PhoneNo");
-                manufacturers.add(manufacturer);
+                manufacturer.Agent = searchManufacturers.getString("Agent");
+                manufacturer.AgentDate = searchManufacturers.getString("AgentDate");
+                manufacturers.add(manufacturer); //One to beam up.
                 LogManager.print(manufacturers.size() + "items long.");
             }
             searchManufacturers.close();
@@ -482,7 +495,7 @@ public class DatabaseManager {
     ///////////AGENT QUERIES/////////////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
     private static LinkedList<DataSet> queryAgents(String query) {
-        LinkedList<DataSet> agents = new LinkedList<>();
+        LinkedList<DataSet> agents = new LinkedList<>(); //That's no moon!
         try {
             ResultSet searchAgents = statement.executeQuery(query);
             LogManager.println("queryAgents() has run the query: " + query, EnumWarningType.NOTE);
@@ -491,11 +504,11 @@ public class DatabaseManager {
                 agent.ID = searchAgents.getString("ID");
                 agent.username = searchAgents.getString("Username");
                 agent.PasswordHash = searchAgents.getString("PasswordHash");
-                agent.name = searchAgents.getString("Name");
+                agent.name = searchAgents.getString("FullName");
                 agent.email = searchAgents.getString("Email");
                 agent.superAgent = searchAgents.getString("SuperAgent");
                 agent.status = searchAgents.getString("Status");
-                agents.add(agent);
+                agents.add(agent); //Welcome to the obsidian order.
             }
             searchAgents.close();
         } catch (SQLException e) {
@@ -507,11 +520,35 @@ public class DatabaseManager {
     /////////////////////////////////////////////////////////////////////////////////
     ///////////SET STATUS////////////////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
-    public static void setAgentStatus(String username, String status){
+    public static void setAgentStatus(String username, String status) { //We're competing with facebook.
+
+
+        if (status.equals("REMOVE")) {
+            try {
+                statement.executeUpdate("DELETE FROM Agents WHERE Username = '" + username + "' ");
+            } catch (SQLException e) {
+                e.printStackTrace();
+            }
+        } else {
+            try {
+                statement.executeUpdate("UPDATE Agents SET " +
+                        "Status = '" + status + "' " +
+                        "WHERE Username = '" + username + "'" + endQueryLine);
+            } catch (SQLException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////
+    ///////////Clear Table///////////////////////////////////////////////////////////
+    /////////////////////////////////////////////////////////////////////////////////
+
+    public void clearInbox(String username) {
         try {
-            statement.executeUpdate("UPDATE Agents SET " +
-                    "Status = '" + status + "' " +
-                    "WHERE Username = '" + username + "'" + endQueryLine);
+            statement.executeUpdate("UPDATE Applications SET" +
+                    "AgentUsername = '' " +
+                    "WHERE AgentUsername = '" + username + "'" + endQueryLine);
         } catch (SQLException e) {
             e.printStackTrace();
         }
@@ -527,15 +564,18 @@ public class DatabaseManager {
             /*while(searchManufacturers.next()) {
                 userm.username = searchManufacturers.getString("Username");
             }*/
+            LogManager.print("Updating information for manufacturer" + manufacturer.username + "... ", EnumWarningType.NOTE);
             statement.executeUpdate("UPDATE Manufacturers SET " +
-                    "Name = '" + manufacturer.name + "', " +
+                    "FullName = '" + manufacturer.name + "', " + //WHOOOOO ARE YOU? OOH OHH, OOH OOH...
                     "RepID = '" + manufacturer.RepID + "', " +
                     "Email = '" + manufacturer.email + "', " +
                     "PlantRegistry = '" + manufacturer.PlantRegistry + "', " +
                     "PhoneNo = '" + manufacturer.PhoneNo + "' " +
                     "WHERE Username = '" + manufacturer.username + "'" + endQueryLine);
+            LogManager.println("Success!");
         } catch (SQLException e) {
-            e.printStackTrace();
+            LogManager.print("Failed. ");
+            LogManager.println(e.getMessage());
         }
     }
 
@@ -553,8 +593,6 @@ public class DatabaseManager {
                 statement.executeUpdate("DELETE FROM Applications WHERE ApplicationNo = '" + application.ApplicationNo + "'" + endQueryLine);
                 submitApplication(application);
             }
-
-
         } catch (SQLException e) {
             e.printStackTrace();
         }
@@ -563,48 +601,59 @@ public class DatabaseManager {
     /////////////////////////////////////////////////////////////////////////////////
     ///////////APPROVE APPLICATION///////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
+    /*public static void reapproveApplication(String ApplicationNum, String TTBID) {
+        //String TTBID = generateTTBID();
+        approveApplication(ApplicationNum, TTBID);
+    }
+    public static void approveNewApplication(String ApplicationNum) {
+        //String TTBID = generateTTBID();
+
+        approveApplication(ApplicationNum, TTBID);
+    }*/
+
     public static void approveApplication(String ApplicationNum) {
-        String TTBID = generateTTBID();
+
         try {
             statement.executeUpdate("UPDATE Applications SET ApplicationStatus = 'APPROVED' WHERE ApplicationNo = '" + ApplicationNum + "'" + endQueryLine);
             statement.executeUpdate("UPDATE Applications SET AgentUsername = NULL WHERE ApplicationNo = '" + ApplicationNum + "'" + endQueryLine);
-            statement.executeUpdate("UPDATE Applications SET ApprovedTTBID = '" + TTBID + "' WHERE ApplicationNo = '" + ApplicationNum + "'" + endQueryLine);
+            //statement.executeUpdate("UPDATE Applications SET ApprovedTTBID = '" + TTBID + "' WHERE ApplicationNo = '" + ApplicationNum + "'" + endQueryLine);
         } catch (SQLException e) {
             e.printStackTrace();
         }
         LinkedList<DataSet> approvedApplicationLinkedList = queryDatabase(EnumTableType.APPLICATION, "ApplicationNo", ApplicationNum);
-        assert approvedApplicationLinkedList != null;
+        assert approvedApplicationLinkedList != null; //THERE. ARE. FOUR! LIGHTS!
         Application approvedApplication = (Application) approvedApplicationLinkedList.getFirst();
         String ApplicationNo = approvedApplication.ApplicationNo;
         String SerialNo = approvedApplication.SerialNo;
         String ApplicationType = approvedApplication.ApplicationType;
         String ApplicationStatus = approvedApplication.ApplicationStatus;
         String ManufacturerUsername = approvedApplication.ManufacturerUsername;
-        String AgentName = approvedApplication.AgentName;
+        String RepName = approvedApplication.RepName;
         String AgentUsername = approvedApplication.AgentUsername;
+        String AgentName = approvedApplication.AgentName;
         String RepID = approvedApplication.RepID;
         String PlantRegistry = approvedApplication.PlantRegistry;
         String Locality = approvedApplication.Locality;
         String Brand = approvedApplication.Brand;
-        String FancifulName = approvedApplication.FancifulName;
-        String AlcoholType = approvedApplication.AlcoholType;
+        String FancifulName = approvedApplication.FancifulName; //Fancy feast is delicious.
+        String AlcoholType = approvedApplication.AlcoholType; // WHAT ARE THEY SELLING??
         String ABV = approvedApplication.ABV;
-        String Address = approvedApplication.Address;
-        String Address2 = approvedApplication.Address2;
+        String Address = approvedApplication.Address;//Is this the real life?
+        String Address2 = approvedApplication.Address2;//Is this just fantasy?
         String Formula = approvedApplication.Formula;
-        String WineAppelation = approvedApplication.WineAppelation;
-        String VintageDate = approvedApplication.VintageDate;
+        String WineAppelation = approvedApplication.WineAppelation;//Caught in a landslide
+        String VintageDate = approvedApplication.VintageDate;//NO ESCAPE FROM REALITY...
         String Grapes = approvedApplication.Grapes;
-        String PH = approvedApplication.PH;
+        String PH = approvedApplication.PH; //THEY'RE SELLING CHOCOLATE!!!
         String PhoneNo = approvedApplication.PhoneNo;
         String Email = approvedApplication.Email;
         String AdditionalInfo = approvedApplication.AdditionalInfo;
         String DateOfSubmission = approvedApplication.DateOfSubmission;
-        String DateOfApproval = approvedApplication.DateOfApproval;
+        String CompletedDate = StringUtilities.getDate();
         String DateOfExpiration = approvedApplication.DateOfExpiration;
-        String ApprovedTTBID = approvedApplication.ApprovedTTBID;
+        String TTBID = approvedApplication.ApprovedTTBID;
         String ReasonForRejection = approvedApplication.ReasonForRejection;
-//        LogManager.println("LOOOOOOK HEEEEEEERREEEEEE: " + ApplicationNo + " " + ABV);
+        String Class = "";
 
         try {
             LogManager.println("INSERTING THINGS NOW!!!");
@@ -615,38 +664,41 @@ public class DatabaseManager {
                     "CompletedDate, " +
                     "FancifulName, " +
                     "BrandName, " +
-                    "Origin, " +
                     "Class, " +
+                    "Origin, " +
                     "Type, " +
                     "AlcoholContent, " +
                     "VintageYear, " +
                     "PH) VALUES ('" +
-                    ApprovedTTBID + "', '" +
+                    TTBID + "', '" +
                     PlantRegistry + "', '" +
                     SerialNo + "', '" +
-                    DateOfApproval + "', '" +
-                    FancifulName + "', '" +
-                    Brand + "', '" +
+                    CompletedDate + "', '" +
+                    FancifulName.toUpperCase() + "', '" +
+                    Brand.toUpperCase() + "', '" +
+                    PH + "', '" +
                     Locality + "', '" +
                     AlcoholType + "', '" +
                     ABV + "', '" +
                     VintageDate + "', '" +
-                    PH + "') + endQueryLine");
+                    PH + "')" + endQueryLine);
         } catch (SQLException e) {
             e.printStackTrace();
         }
     }
+
     //HACK
     /////////////////////////////////////////////////////////////////////////////////
     ///////////REJECT APPLICATION////////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
-    public static void rejectApplication(String ApplicationNo) {//GET REKKKDDDDD!
+    public static void rejectApplication(String ApplicationNo, String reasonForRejection) {
         try {
             statement.executeUpdate("UPDATE Applications SET ApplicationStatus = 'REJECTED' WHERE ApplicationNo = '" + ApplicationNo + "'" + endQueryLine);
+            statement.executeUpdate("UPDATE Applications SET ReasonForRejection = '"+ reasonForRejection + "' WHERE ApplicationNo = '" + ApplicationNo + "'" + endQueryLine);
             statement.executeUpdate("UPDATE Applications SET AgentUsername = NULL WHERE ApplicationNo = '" + ApplicationNo + "'" + endQueryLine);
             //stmt.executeUpdate("INSERT INTO Alcohol (TTBID, PermitNo, SerialNo, CompletedDate, FancifulName, BrandName, Origin, Class, Type) VALUES (" + TTBID + " " + PermitNo + " " + SerialNo + " " + Date + " " + FancifulName + " " + BrandName + " " + Origin + " " + Class + " " + Type + ")");
         } catch (SQLException e) {
-            LogManager.println("could not remove application", EnumWarningType.ERROR);
+            LogManager.println("could not remove application", EnumWarningType.ERROR); //I'm sorry Dave, but I'm afraid I can't do that.
             e.printStackTrace();
         }
     }
@@ -654,8 +706,13 @@ public class DatabaseManager {
     /////////////////////////////////////////////////////////////////////////////////
     ///////////FORWARD APPLICATION///////////////////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
-    public void forwardApplication(String ApplicationNo, String AgentUsername){
-//        Change the Agent username on the the specific application to the new username passed
+    public void forwardApplication(String ApplicationNo, String AgentUsername) {
+        try {
+            statement.executeUpdate("UPDATE Applications SET AgentUsername = '" + AgentUsername + "' WHERE ApplicationNo = '" + ApplicationNo + "'" + endQueryLine);
+        }catch (SQLException e) {
+            LogManager.println("agent does not exist", EnumWarningType.ERROR); //I'm sorry Dave, but I'm afraid I can't do that.
+            e.printStackTrace();
+        }
     }
 
     /////////////////////////////////////////////////////////////////////////////////
@@ -670,27 +727,72 @@ public class DatabaseManager {
     ///////////ADD APPLICATIONS TO AGENT'S INBOX/////////////////////////////////////
     /////////////////////////////////////////////////////////////////////////////////
     public static LinkedList<Application> addApplicationToInbox(String type, String username, int num) {
-        LinkedList<DataSet> applicationLinkedList = queryApplications("SELECT * FROM Applications WHERE AlcoholType = '" + type + "';");
+        LinkedList<DataSet> applicationLinkedList = queryApplications("SELECT * FROM Applications WHERE AlcoholType = '" + type + "' AND ApplicationStatus = 'PENDING' AND AgentUsername = '';");
         LinkedList<Application> addToInbox = new LinkedList<>();
-        for (int i = 0; i < num; i++) {
-            try {
-                Application tempApp = (Application) applicationLinkedList.get(i);
-                if (tempApp.ApplicationStatus.equals("PENDING") && tempApp.AgentUsername.equals("")) {
-                    LogManager.println("Application added");
-                    addToInbox.add((Application) applicationLinkedList.get(i));
 
+        //counters
+        int i = 0;
+        int j = -1;
+
+        boolean isFirst = true;//checks if it is the first time through the linked list
+
+        while (i < num) { //makes sure that the inbox never exceeds 10 applications
+            try {
+                //increaces the counter of linked list
+                j++;
+                Application tempApp = (Application) applicationLinkedList.get(j); //gets one of the applications from all applications
+                LinkedList<DataSet> tempMans = queryDatabase(EnumTableType.MANUFACTURER, "Username", tempApp.ManufacturerUsername);//gets the manufacturer for the specific application
+                UserManufacturer tempMan = (UserManufacturer) tempMans.getFirst(); //gets the current date
+                String curDate = StringUtilities.getDate();
+                LogManager.println(curDate);
+                if (!tempMan.AgentDate.equals(curDate)) {
+                    tempMan.Agent = "";
+                }
+                //check if that manufacturer has a specific agent on the day and adds it to the inbox
+                if (tempMan.Agent.equals(username) || (tempMan.Agent.equals("") && !isFirst)) {
+                    addToInbox.add((Application) applicationLinkedList.get(j));
                     try {
+                        //sets the applications agent as the agents username who was there
                         statement.executeUpdate("UPDATE Applications SET AgentUsername = '" + username + "' WHERE ApplicationNo = '" + tempApp.ApplicationNo + "'" + endQueryLine);
+                        //sets the manufacturers agent and day to the agent username and date passed in
+                        statement.executeUpdate("UPDATE Manufacturers SET Agent = '" + username + "' WHERE Username = '" + tempMan.Agent + "'" + endQueryLine);
+                        //increments the number of applications added to the inbox
+                        i++;
                     } catch (SQLException e) {
                         LogManager.println("Error setting agent on application " + ((Application) applicationLinkedList.get(i)).ApplicationNo + " !", EnumWarningType.ERROR);
                     }
+                    //checks if the manufacturer doesnt have an agent
                 }
+                /*else if(tempMan.Agent.equals("")){
+                    //adds the application to the inbox on the second pass
+                    if(!isFirst){
+                        //same as above
+                        addToInbox.add((Application) applicationLinkedList.get(i));
+                        try {
+                            statement.executeUpdate("UPDATE Applications SET AgentUsername = '" + username + "' WHERE ApplicationNo = '" + tempApp.ApplicationNo + "'" + endQueryLine);
+                            statement.executeUpdate("UPDATE Manufacturers SET Agent = '" + username + "' WHERE Username = '" + tempMan.Agent + "'" + endQueryLine);
+                            i++;
+                        } catch (SQLException e) {
+                            LogManager.println("Error setting agent on application " + ((Application) applicationLinkedList.get(i)).ApplicationNo + " !", EnumWarningType.ERROR);
+                        }
+                    }
+                }*/
+                //if the user has an agent it does not add it to the inbox
             } catch (Exception e) {
-                break;
+                //list of applications changed
+                if (isFirst) {
+                    //makes the while loop continue and start at the begining of the list
+                    isFirst = false;
+                    j = -1;
+                } else {//If your hand touches metal...
+                    //the list ran out of entries twice so break the loop cause nothings left
+                    //...I swear by my pretty floral bonnet, I will end you.
+                    break;
+                }
             }
-
         }
-        return addToInbox;
+
+        return addToInbox; //YOU'VE GOT MAIL!!!!
     }
 
     /////////////////////////////////////////////////////////////////////////////////
@@ -708,8 +810,9 @@ public class DatabaseManager {
                 application.ApplicationType = getApplications.getString("ApplicationType");
                 application.ApplicationStatus = getApplications.getString("ApplicationStatus");
                 application.ManufacturerUsername = getApplications.getString("ManufacturerUsername");
-                application.AgentName = getApplications.getString("AgentName");
+                application.RepName = getApplications.getString("RepName");
                 application.AgentUsername = getApplications.getString("AgentUsername");
+                application.AgentName = getApplications.getString("AgentName");
                 application.RepID = getApplications.getString("RepID");
                 application.PlantRegistry = getApplications.getString("PlantRegistry");
                 application.Locality = getApplications.getString("Locality");
@@ -744,7 +847,7 @@ public class DatabaseManager {
             }
         } catch (SQLException e) {
             LogManager.println("Empty result set! Is the applications table empty?", EnumWarningType.WARNING);
-            return new LinkedList<>();
+            return new LinkedList<>(); //I married me a powerful, ugly creature!
         }
 
         return applicationLinkedList;
@@ -766,8 +869,8 @@ public class DatabaseManager {
                         SuperAgent = "true";
                     }
                     String status = "pending";
-                    statement.executeUpdate("INSERT INTO Agents" + " (ID, username, PasswordHash, Name, Email, SuperAgent, status) VALUES " +
-                            "('" + agent.ID + "',  '" + agent.username + "', '" + PasswordStorage.createHash(password) + "', '" + agent.name + "', '" + agent.email + "', '" + SuperAgent + status + "')");
+                    statement.executeUpdate("INSERT INTO Agents" + " (ID, username, PasswordHash, FullName, Email, SuperAgent, Status) VALUES " +
+                            "('" + agent.ID + "',  '" + agent.username + "', '" + PasswordStorage.createHash(password) + "', '" + agent.name + "', '" + agent.email + "', '" + SuperAgent + "', '" + status + "')");
                 } catch (PasswordStorage.CannotPerformOperationException e) {
                     e.printStackTrace();
                 }
@@ -775,8 +878,8 @@ public class DatabaseManager {
             if (userType.equals(EnumUserType.MANUFACTURER)) {
                 UserManufacturer manufacturer = (UserManufacturer) user;
                 try {
-                    statement.executeUpdate("INSERT INTO Manufacturers" + " (Username, PasswordHash, Company, FullName, RepID, Email, PlantRegistry, PhoneNo, Address2) VALUES " +
-                            "( '" + manufacturer.username + "', '" + PasswordStorage.createHash(password) + "', '" + "" + "', '" + "" + "', '" + "" + "', '" + "" + "', '" + "" + "', '" + "" + "', '" + "" + "')");
+                    statement.executeUpdate("INSERT INTO Manufacturers" + " (Username, PasswordHash, Company, FullName, RepID, Email, PlantRegistry, PhoneNo, Address2, Agent, AgentDate) VALUES " +
+                            "('" + manufacturer.username + "', '" + PasswordStorage.createHash(password) + "', '', '', '', '', '', '', '', '', '')");
 
                 } catch (PasswordStorage.CannotPerformOperationException e) {
                     e.printStackTrace();
@@ -795,20 +898,35 @@ public class DatabaseManager {
     public User login(String username, String password) throws UserNotFoundException, IncorrectPasswordException, PasswordStorage.InvalidHashException, PasswordStorage.CannotPerformOperationException {
         ResultSet user;
         try {
-            user = statement.executeQuery("SELECT * FROM Agents WHERE username = '" + username + "';");
+            LogManager.print("Searching for an agent called " + username + "... ", EnumWarningType.NOTE);
+//            user = statement.executeQuery("SELECT * FROM Agents WHERE username = '" + username + "';");
+
+            user = statement.executeQuery("SELECT * FROM Agents WHERE username = '" + username + "'" + endQueryLine);
+
             if (user.next()) {
-                UserAgent agent = new UserAgent(user.getString("name"), username, user.getString("email"), user.getString("ID"), "false", "pending");
-                LogManager.println("User " + username + " is an agent");
+
+                //Create the Agent object from database information
+                UserAgent agent = new UserAgent(user.getString("FullName"), username, user.getString("Email"), user.getString("ID"),user.getString("SuperAgent"), user.getString("Status"));
+
+                LogManager.println("Found!");
+
                 tryPassword(username, password, user.getString("PasswordHash"));
+
                 return agent;
             } else {
-                user = statement.executeQuery("SELECT * FROM Manufacturers WHERE username = '" + username + "';");
-                LinkedList<DataSet> manufacturerLinkedList = queryDatabase(EnumTableType.MANUFACTURER, "Username", username);
-                assert manufacturerLinkedList != null;
+                LogManager.println("not found.");
+                LogManager.println("Searching for a manufacturer called " + username + "... ", EnumWarningType.NOTE);
+
+                user = statement.executeQuery("SELECT * FROM Manufacturers WHERE Username = '" + username + "'" + endQueryLine);
+                LinkedList<DataSet> manufacturerLinkedList = new LinkedList<>();
+                if (user.next()) {
+                    manufacturerLinkedList = queryDatabase(EnumTableType.MANUFACTURER, "Username", username);
+                }
+
                 if (!manufacturerLinkedList.isEmpty()) {
-                    LogManager.println("YARP! WE FOUND " + username + "!");
-                    UserManufacturer manufacturer = (UserManufacturer) manufacturerLinkedList.get(0);
-                    LogManager.println("User " + manufacturer.username + " is a manufacturer");
+                    LogManager.println("Found!");
+
+                    UserManufacturer manufacturer = (UserManufacturer) manufacturerLinkedList.getFirst();
                     try {
                         tryPassword(username, password, user.getString("PasswordHash"));
                     } catch (Exception e) {
@@ -894,7 +1012,7 @@ public class DatabaseManager {
         }
 
         try {
-            statement.executeUpdate("INSERT INTO Alcohol (TTBID, PermitNo, SerialNo, CompletedDate, FancifulName, BrandName, Origin, Class, Type) VALUES ('12104001000339', 'BR-MA-BOS-1', '12039U', '2012/04/23', 'OLD KENTUCKY STYLE', 'SAMUEL ADAMS', '24', '906', 'Beer')");
+            statement.executeUpdate("INSERT INTO Alcohol (TTBID, PermitNo, SerialNo, CompletedDate, FancifulName, BrandName, Origin, Class, Type) VALUES ('12104001000339', 'BR-MA-BOS-1', '12039U', '2012/04/23', 'OLD KENTUCKY STYLE', 'SAMUEL ADAMS', '24', '906', 'Beer')"); //Why are you looking down here? There's nothing to see here.
         } catch (SQLException e) {
             e.printStackTrace();
         }
@@ -960,3 +1078,8 @@ public class DatabaseManager {
         }
     }
 }
+//You're still here?
+//It's over.
+//Go home.
+
+//...Go.
